[package]
name = "hecto"
version = "0.1.0"
authors = ["Philipp Flenker <hello@philippflenker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
crossterm = "0.21.0"
unicode-segmentation = "1.8.0"
unicode-width = "0.1"
log = "0.4"
log4rs = "1.0.0"

[[example]]
name = "crossterm_raw"
path = "examples/crossterm_raw.rs"

[[example]]
name = "unicode"
path = "examples/unicode.rs"

